--- a/index.rmd
+++ b/index.rmd
@@ -1,8 +1,8 @@
 ---
 title: "Are You Really Fit?"
 output:
-  pdf_document: default
-  html_notebook: default
+  html_document:
+    df_print: paged
 ---
 
 This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. When you execute code within the notebook, the results appear beneath the code. 
@@ -20,8 +20,13 @@ Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by press
 
 When you save the notebook, an HTML file containing the code and output will be saved alongside it (click the *Preview* button or press *Ctrl+Shift+K* to preview the HTML file).
 
+Pressing buttons is not my forte.
+
+Mouse is not my forte either
+
+
 $$2^3 = \left(\sum_{x=1}^{n}\frac{x+1}{x-1}\right)$$
 There's a place in my heart.
-
+Words donmean anything
 
 The preview shows you a rendered HTML copy of the contents of the editor. Consequently, unlike *Knit*, *Preview* does not run any R code chunks. Instead, the output of the chunk when it was last run in the editor is displayed.
